src/test/ui/const-generics/issues/issue-74950.min.stderr
error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: `Inner` is forbidden as the type of a const generic parameter
  --> $DIR/issue-74950.rs:17:23
   |
LL | struct Outer<const I: Inner>;
   |                       ^^^^^
   |
   = note: the only supported types are integers, `bool` and `char`
   = help: more complex types are supported with `#![feature(const_generics)]`

error: aborting due to 5 previous errors

